fix: display on mobile

--- a/extensionWebsite/styles/common.css
+++ b/extensionWebsite/styles/common.css
@@ -138,6 +138,11 @@ h1 {
     text-align: center;
 }
 
+.margintop {
+    margin-top: 2em;
+    height: 2em;
+}
+
 
 h4 {
     margin-top: 0;
